made sign up button round

--- a/capstone_project_1/landing_page.html
+++ b/capstone_project_1/landing_page.html
@@ -38,7 +38,7 @@
                         <p><label for="em">Email</label></p>
                     
                         <input id="em" type="email" placeholder="email@ssd.com">
-                        <p><input type="submit" name="submission" value= "Sign up"></p>
+                        <p><input class="button" type="submit" name="submission" value= "Sign up" class="button"></p>
                     
                     </td>
                 </tr>
