--- a/capstone_project_1/thanks.html
+++ b/capstone_project_1/thanks.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="landing_page.css">
     <title>Signed up</title>
 </head>
 <body>
     <h1>Registration Complete</h1>
-    <p> We'll get back to you as soon as possible </p>
+    <p> Thanks for registering. We'll get back to you as soon as possible </p>
     
 </body>
 </html>
