field made to size

--- a/capstone_project_1/landing_page.html
+++ b/capstone_project_1/landing_page.html
@@ -31,13 +31,13 @@
                     <h2> Sign up for our upcoming launch!</h2>
                     <form action="thanks.html">
                         <p><label for="fn"> First Name</label></p>
-                        <input id="fn " type="text" placeholder="first name" required>
+                        <input class ="field" id="fn " type="text" placeholder="first name" required>
 
-                        <p><label for="ln">Last Name</label></p>
-                        <input id="ln" type="text" placeholder="last name">
+                        <p><label class ="field" for="ln">Last Name</label></p>
+                        <input class ="field" id="ln" type="text" placeholder="last name">
                         <p><label for="em">Email</label></p>
                     
-                        <input id="em" type="email" placeholder="email@ssd.com">
+                        <input class ="field" id="em" type="email" placeholder="username@email.com">
                         <p><input class="button" type="submit" name="submission" value= "Sign up" class="button"></p>
                     
                     </td>
